fixing text align in nav

--- a/media/css/about.css
+++ b/media/css/about.css
@@ -18,6 +18,9 @@ html {
 	display: grid;
 	align-items: center;
 }
+.name{
+	text-align: center;
+}
 .block2{
 	float: left;
 	margin: 10px;
@@ -48,5 +51,6 @@ a:link{
 	color: white;
 }
 .links{
-	margin-left: 4.5rem;
+	display: inline-block;
+	text-align: center;
 }
